src/test/resources/Parser/SyntaxErrors/CyclicDelegate2.front
class A:
    delegate * : B b;
class B:
    delegate * : C c;
class C:
    delegate * : A a;